PPL Mở rộng/initial/initial/target/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'return'", "'var'", "'dynamic'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'number'", 
                     "'string'", "'bool'", "<INVALID>", "'<-'", "'-'", "'+'", 
                     "'*'", "'/'", "'%'", "<INVALID>", "'not'", "'and'", 
                     "'or'", "'...'", "'='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "','", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "RETURN", "VAR", "DYNAMIC", 
                      "FUNC", "FOR", "UNTIL", "BY", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "ELIF", "BEGIN", "END", "NUMBER", "STRING", 
                      "BOOL", "NUMBERLIT", "ASSIGNMENTSIGN", "SUB", "ADD", 
                      "MUL", "DIV", "REMAIN", "BOOLEANLIT", "NEG", "CON", 
                      "DIS", "STRCON", "EQ", "NOTEQ", "LESS", "GREATER", 
                      "LESSSOREQ", "GREATEROREQ", "COMPARESTR", "STRINGLIT", 
                      "NEWLINE", "LEFTSQUARE", "RIGHTSQUARE", "COMMA", "OPENPARENTHESIS", 
                      "CLOSEPARENTHESIS", "IDENTIFIER", "WHITESPACE", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_runlist = 1
    RULE_run = 2
    RULE_funcdecl = 3
    RULE_parameterlist = 4
    RULE_parameterprime = 5
    RULE_param = 6
    RULE_newlinesep = 7
    RULE_endfuncdecl = 8
    RULE_ifstmt = 9
    RULE_eliflist = 10
    RULE_elselist = 11
    RULE_onlyifstmt = 12
    RULE_elifstmt = 13
    RULE_elsestmt = 14
    RULE_statement = 15
    RULE_blockstmt = 16
    RULE_statementlist = 17
    RULE_funcstmt = 18
    RULE_returnstmt = 19
    RULE_continuestmt = 20
    RULE_breakstmt = 21
    RULE_forstmt = 22
    RULE_assignstmt = 23
    RULE_lhs = 24
    RULE_elementarray = 25
    RULE_vardeclstmt = 26
    RULE_newlinelist = 27
    RULE_vardecl = 28
    RULE_varstartdecl = 29
    RULE_dynamicstartdecl = 30
    RULE_normaldecl = 31
    RULE_arraydecl = 32
    RULE_typ = 33
    RULE_funccall = 34
    RULE_argumentlist = 35
    RULE_argueprime = 36
    RULE_arguelement = 37
    RULE_expression = 38
    RULE_expression1 = 39
    RULE_expression2 = 40
    RULE_expression3 = 41
    RULE_expression4 = 42
    RULE_expression5 = 43
    RULE_expression6 = 44
    RULE_operand = 45
    RULE_subexpression = 46
    RULE_element_expression = 47
    RULE_index_operator = 48
    RULE_arrayexpression = 49
    RULE_arraylit = 50
    RULE_sizelist = 51
    RULE_arraytype = 52
    RULE_eleprime = 53
    RULE_multiplyingoperator = 54
    RULE_addingoperator = 55
    RULE_logicaloperator = 56
    RULE_relateoperator = 57

    ruleNames =  [ "program", "runlist", "run", "funcdecl", "parameterlist", 
                   "parameterprime", "param", "newlinesep", "endfuncdecl", 
                   "ifstmt", "eliflist", "elselist", "onlyifstmt", "elifstmt", 
                   "elsestmt", "statement", "blockstmt", "statementlist", 
                   "funcstmt", "returnstmt", "continuestmt", "breakstmt", 
                   "forstmt", "assignstmt", "lhs", "elementarray", "vardeclstmt", 
                   "newlinelist", "vardecl", "varstartdecl", "dynamicstartdecl", 
                   "normaldecl", "arraydecl", "typ", "funccall", "argumentlist", 
                   "argueprime", "arguelement", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "operand", "subexpression", "element_expression", 
                   "index_operator", "arrayexpression", "arraylit", "sizelist", 
                   "arraytype", "eleprime", "multiplyingoperator", "addingoperator", 
                   "logicaloperator", "relateoperator" ]

    EOF = Token.EOF
    COMMENT=1
    RETURN=2
    VAR=3
    DYNAMIC=4
    FUNC=5
    FOR=6
    UNTIL=7
    BY=8
    BREAK=9
    CONTINUE=10
    IF=11
    ELSE=12
    ELIF=13
    BEGIN=14
    END=15
    NUMBER=16
    STRING=17
    BOOL=18
    NUMBERLIT=19
    ASSIGNMENTSIGN=20
    SUB=21
    ADD=22
    MUL=23
    DIV=24
    REMAIN=25
    BOOLEANLIT=26
    NEG=27
    CON=28
    DIS=29
    STRCON=30
    EQ=31
    NOTEQ=32
    LESS=33
    GREATER=34
    LESSSOREQ=35
    GREATEROREQ=36
    COMPARESTR=37
    STRINGLIT=38
    NEWLINE=39
    LEFTSQUARE=40
    RIGHTSQUARE=41
    COMMA=42
    OPENPARENTHESIS=43
    CLOSEPARENTHESIS=44
    IDENTIFIER=45
    WHITESPACE=46
    ILLEGAL_ESCAPE=47
    UNCLOSE_STRING=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newlinesep(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesepContext,0)


        def runlist(self):
            return self.getTypedRuleContext(ZCodeParser.RunlistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.newlinesep()
            self.state = 117
            self.runlist()
            self.state = 118
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RunlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def run(self):
            return self.getTypedRuleContext(ZCodeParser.RunContext,0)


        def runlist(self):
            return self.getTypedRuleContext(ZCodeParser.RunlistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_runlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRunlist" ):
                return visitor.visitRunlist(self)
            else:
                return visitor.visitChildren(self)




    def runlist(self):

        localctx = ZCodeParser.RunlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_runlist)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.run()
                self.state = 121
                self.runlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.run()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def vardeclstmt(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_run

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRun" ):
                return visitor.visitRun(self)
            else:
                return visitor.visitChildren(self)




    def run(self):

        localctx = ZCodeParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_run)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.funcdecl()
                pass
            elif token in [ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.NUMBER, ZCodeParser.STRING, ZCodeParser.BOOL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.vardeclstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def OPENPARENTHESIS(self):
            return self.getToken(ZCodeParser.OPENPARENTHESIS, 0)

        def parameterlist(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterlistContext,0)


        def CLOSEPARENTHESIS(self):
            return self.getToken(ZCodeParser.CLOSEPARENTHESIS, 0)

        def newlinesep(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesepContext,0)


        def endfuncdecl(self):
            return self.getTypedRuleContext(ZCodeParser.EndfuncdeclContext,0)


        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = ZCodeParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdecl)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(ZCodeParser.FUNC)
                self.state = 131
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 132
                self.match(ZCodeParser.OPENPARENTHESIS)
                self.state = 133
                self.parameterlist()
                self.state = 134
                self.match(ZCodeParser.CLOSEPARENTHESIS)
                self.state = 135
                self.newlinesep()
                self.state = 136
                self.endfuncdecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(ZCodeParser.FUNC)
                self.state = 139
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 140
                self.match(ZCodeParser.OPENPARENTHESIS)
                self.state = 141
                self.parameterlist()
                self.state = 142
                self.match(ZCodeParser.CLOSEPARENTHESIS)
                self.state = 143
                self.newlinelist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_parameterlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterlist" ):
                return visitor.visitParameterlist(self)
            else:
                return visitor.visitChildren(self)




    def parameterlist(self):

        localctx = ZCodeParser.ParameterlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterlist)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.STRING, ZCodeParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.parameterprime()
                pass
            elif token in [ZCodeParser.CLOSEPARENTHESIS]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def parameterprime(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterprimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_parameterprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterprime" ):
                return visitor.visitParameterprime(self)
            else:
                return visitor.visitChildren(self)




    def parameterprime(self):

        localctx = ZCodeParser.ParameterprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterprime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.param()
                self.state = 152
                self.match(ZCodeParser.COMMA)
                self.state = 153
                self.parameterprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def arraylit(self):
            return self.getTypedRuleContext(ZCodeParser.ArraylitContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ZCodeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.typ()
                self.state = 159
                self.match(ZCodeParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.typ()
                self.state = 162
                self.arraylit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewlinesepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newlinelist(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinelistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_newlinesep

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewlinesep" ):
                return visitor.visitNewlinesep(self)
            else:
                return visitor.visitChildren(self)




    def newlinesep(self):

        localctx = ZCodeParser.NewlinesepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_newlinesep)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.newlinelist()
                pass
            elif token in [ZCodeParser.RETURN, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.BEGIN, ZCodeParser.NUMBER, ZCodeParser.STRING, ZCodeParser.BOOL, ZCodeParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndfuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_endfuncdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndfuncdecl" ):
                return visitor.visitEndfuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def endfuncdecl(self):

        localctx = ZCodeParser.EndfuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_endfuncdecl)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.RETURN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.returnstmt()
                pass
            elif token in [ZCodeParser.BEGIN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.blockstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def onlyifstmt(self):
            return self.getTypedRuleContext(ZCodeParser.OnlyifstmtContext,0)


        def eliflist(self):
            return self.getTypedRuleContext(ZCodeParser.EliflistContext,0)


        def elselist(self):
            return self.getTypedRuleContext(ZCodeParser.ElselistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_ifstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstmt" ):
                return visitor.visitIfstmt(self)
            else:
                return visitor.visitChildren(self)




    def ifstmt(self):

        localctx = ZCodeParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.onlyifstmt()
            self.state = 175
            self.eliflist()
            self.state = 176
            self.elselist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EliflistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elifstmt(self):
            return self.getTypedRuleContext(ZCodeParser.ElifstmtContext,0)


        def eliflist(self):
            return self.getTypedRuleContext(ZCodeParser.EliflistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_eliflist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEliflist" ):
                return visitor.visitEliflist(self)
            else:
                return visitor.visitChildren(self)




    def eliflist(self):

        localctx = ZCodeParser.EliflistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_eliflist)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.elifstmt()
                self.state = 179
                self.eliflist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElselistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elsestmt(self):
            return self.getTypedRuleContext(ZCodeParser.ElsestmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_elselist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElselist" ):
                return visitor.visitElselist(self)
            else:
                return visitor.visitChildren(self)




    def elselist(self):

        localctx = ZCodeParser.ElselistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_elselist)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.elsestmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OnlyifstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ZCodeParser.IF, 0)

        def OPENPARENTHESIS(self):
            return self.getToken(ZCodeParser.OPENPARENTHESIS, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def CLOSEPARENTHESIS(self):
            return self.getToken(ZCodeParser.CLOSEPARENTHESIS, 0)

        def newlinesep(self):
            return self.getTypedRuleContext(ZCodeParser.NewlinesepContext,0)


        def statement(self):
            return self.getTypedRuleContext(ZCodeParser.StatementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_onlyifstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnlyifstmt" ):
                return visitor.visitOnlyifstmt(self)
            else:
                return visitor.visitChildren(self)




    def onlyifstmt(self):

        localctx = ZCodeParser.OnlyifstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_onlyifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(ZCodeParser.IF)
            self.state = 189
            self.match(ZCodeParser.OPENPARENTHESIS)
            self.state = 190
            self.expression()
            self.state = 191
            self.match(ZCodeParser.CLOSEPARENTHESIS)
            self.state = 192
            self.newlinesep()
            self.state = 193
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(ZCodeParser.ELIF, 0)

        def OPENPARENTHESIS(self):
            return self.getToken(ZCodeParser.OPENPARENTHESIS, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)

